<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20">


    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo_icon" />


    <com.mysivana.custom.MSTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/welcome_note"
        android:textSize="@dimen/textsize_20"
        app:fontName="Medium" />

    <com.mysivana.custom.MSTextView
        android:id="@+id/note_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="center"
        android:text="@string/welcome_note_1"
        android:textSize="@dimen/textsize_16"
        app:fontName="Light" />

    <com.mysivana.custom.MSTextView
        android:id="@+id/note_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="center"
        android:text="@string/welcome_note_2"
        android:textSize="@dimen/textsize_16"
        app:fontName="Light" />

    <com.mysivana.custom.MSTextView
        android:id="@+id/note_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_weight="1"
        android:gravity="center|top"
        android:text="@string/welcome_note_3"
        android:textSize="@dimen/textsize_16"
        app:fontName="Light" />

    <com.mysivana.custom.MSButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/dimen_15"
        android:text="@string/click_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_20"
        app:fontName="Medium" />

</LinearLayout>