<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_25">

    <com.mysivana.custom.MSTextView
        style="@style/Match.Wrap"
        android:layout_marginTop="@dimen/dimen_12"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/colorMineShaft1"
        android:textSize="@dimen/textsize_24" />

    <com.mysivana.custom.MSOTPView
        android:id="@+id/otpview"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginBottom="@dimen/dimen_40"
        app:length="6"
        android:inputType="numberDecimal"
        android:textColor="@color/colorMineShaft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.mysivana.custom.MSTextView
        style="@style/Match.Wrap"
        android:id="@+id/tv_resend"
        android:layout_marginTop="@dimen/dimen_15"
        android:gravity="center"
        android:onClick="onClickResend"
        android:text="@string/otp_sent"
        android:textColor="@color/colorMineShaft1"
        android:textSize="@dimen/textsize_16" />

    <com.mysivana.custom.MSButton
        style="@style/Match.Wrap"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/button_bg"
        android:onClick="onClickContinue"
        android:padding="@dimen/dimen_15"
        android:text="@string/click_continue"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_20"
        app:fontName="Medium" />

</LinearLayout>