<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8">

        <com.mysivana.custom.MSTextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/dimen_16"
            app:fontName="Roman" />

        <ImageView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            android:src="@drawable/ic_popup_close_green" />

    </LinearLayout>

    <View style="@style/Divider"></View>

    <com.mysivana.custom.MSTextView
        android:id="@+id/warning_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:padding="@dimen/dimen_10"
        android:text="@string/dialog_window_warning"
        android:textColor="@color/colorMineShaft"
        android:textSize="@dimen/textsize_14"
        app:fontName="Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">

        <com.mysivana.custom.MSTextView
            android:id="@+id/amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_b"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Roman" />

        <com.mysivana.custom.MSTextView
            android:id="@+id/amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">

        <com.mysivana.custom.MSTextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_b"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Roman" />

        <com.mysivana.custom.MSTextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">

        <com.mysivana.custom.MSTextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_b"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Roman" />

        <com.mysivana.custom.MSTextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">

        <com.mysivana.custom.MSTextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_b"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Roman" />

        <com.mysivana.custom.MSTextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMineShaft"
            android:textSize="@dimen/textsize_14"
            app:fontName="Light" />
    </LinearLayout>

    <com.mysivana.custom.MSButton
        android:id="@+id/proceed_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_25"
        android:layout_weight="0.4"
        android:background="@drawable/button_bg"
        android:onClick="onClickSave"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize_16"
        app:fontName="Medium" />

</LinearLayout>